# ens-offchain-resolver-gateway-rs

./: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.musl  LICENSE  README.md  diesel.toml
.github/workflows/: ci.yml  release.yml  tag.yml
ccip-read-server/: Cargo.toml
ccip-read-server/src/: errors.rs  lib.rs  server.rs  types.rs
migrations/2023-06-19-175325_ens_domains/: down.sql  up.sql
offchain-resolver-gateway/: Cargo.toml
offchain-resolver-gateway/src/: main.rs
offchain-resolver-gateway/src/db/: json.rs  mod.rs
res/: Resolver.json
src/: build.rs  db.rs  errors.rs  gateway.rs  lib.rs  main.rs  utils.rs
src/db/: diesel.rs  diesel_schema.rs  mod.rs
