[package]
name = "ccip_read_server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Ethers
#ethers = "2.0.7"
ethers-core = "2.0.7"
ethers-contract = "2.0.7"
ethers-providers = "2.0.7"
futures-util = "0.3.28"

# Warp
#hyper = { version = "1.0.0-rc.3", features = ["full"] }
warp = "0.3"
tokio = { version = "1.28.2", features = ["full"] }
#http-body-util = "0.1.0-rc.2"
url = "2.2"

# Async
async-recursion = "1.0.4"
async-trait = { version = "0.1.68" }

# Error handling
thiserror = "1.0.40"

# Tracing
tracing = "0.1.37"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
ethers = "2.0.7"
anyhow = "1.0"
