[package]
name = "offchain-resolver-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
ccip_read_server = { path = "../ccip-read-server" }

ethers = "2.0.7"

tokio = { version = "1.28.2", features = ["full", "tracing"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
eyre = "0.6.8"

chrono = "0.4.26"
thiserror = "1.0.40"
async-trait = "0.1.68"
clap = { version = "4.3.3", features = ["color", "error-context", "help", "std", "suggestions", "usage", "cargo", "env"] }

openssl = { version = "0.10", features = ["vendored"] }

# Diesel dependencies
diesel = { version = "2.1.0", features = ["postgres", "r2d2"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }
diesel_migrations = { version = "2.1.0", features = ["postgres"], optional = true }


cfg-if = "1.0.0"

[features]
default = ["all"]
all = ["json", "diesel"]
json = []
diesel = ["dep:diesel", "diesel-derive-enum", "diesel_migrations"]

[dev-dependencies]
ethers-ccip-read = "0.1.1"
